--- a/src/assets/scss/common/card.scss
+++ b/src/assets/scss/common/card.scss
@@ -43,6 +43,11 @@ $border-radius-size: 14px;
   margin-bottom: 16px;
 }
 
+.card-stats_alias {
+  margin: 30px 0;
+  border-radius: 14px;
+}
+
 // .card-footer {
 //   margin-bottom: 16px;
 // }
