--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -92,6 +92,10 @@ section,
   margin-top: 80px; // if header is fixed do mt: headerHeight
 }
 
+.wrapper-person {
+  text-align: center;
+}
+
 .container {
   position: relative;
   flex: 0 0 auto;
@@ -125,3 +129,6 @@ section,
 
 @import './common/_common';
 @import './helpers/_helpers';
+
+// theme
+@import './theme'
