--- a/src/assets/scss/common/controls.scss
+++ b/src/assets/scss/common/controls.scss
@@ -1,18 +1,18 @@
 label {
   display: block;
-  font-size: 16px;
-  margin-bottom: 10px;
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 input {
-  padding: 16px 26px;
-  margin-bottom: 30px;
-  border-radius: 20px;
+  padding: 1.6rem 2.6rem;
+  margin-bottom: 3rem;
+  border-radius: 2rem;
 }
 textarea {
-  padding: 30px 27px;
-  border-radius: 14px;
-  margin-bottom: 30px;
+  padding: 3rem 2.7rem;
+  border-radius: 1.4rem;
+  margin-bottom: 3rem;
 }
 input,
 textarea {
