--- a/src/assets/scss/common/navbar.scss
+++ b/src/assets/scss/common/navbar.scss
@@ -1,47 +1,48 @@
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 99;
+  width: 100%;
   padding: 20px 0;
   background-color: $g-0;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.navbar-logo {
-  color: $g-999;
-  font-weight: 700;
-}
-
-.navbar-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar-item {
-  margin-right: 30px;
-  cursor: pointer;
-  &:last-child {
-    margin-right: 0;
+  box-shadow: 0 .3rem 1rem rgba(0, 0, 0, 0.1);
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-}
 
-.navbar-link {
-  display: block;
-  transition: all 0.2s ease;
-  color: $purple-color-100;
-  // active link
-  &.isActive,
-  &.router-link-active,
-  &.router-link-exact-active {
-    text-decoration: underline;
+  &__logo {
+    color: $g-999;
+    font-weight: 700;
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__list + &__list {
+    opacity: .6;
+    margin-top: 1rem;
+  }
+
+  &__item {
+    margin-right: 3rem;
+    cursor: pointer;
+    &:last-child {
+      margin-right: 0;
+      text-align: center;
+    }
+  }
+
+  &__link {
+    display: block;
+    transition: all .2s ease;
+    color: $purple-color-100;
+    // active link
+    &.isActive,
+    &.router-link-active,
+    &.router-link-exact-active {
+      text-decoration: underline;
+    }
   }
 }
