--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,10 +11,10 @@ html {
     font-size: 16px;
   }
   @media screen and (max-width: $tableWidth) {
-    font-size: 15px;
+    font-size: 14px;
   }
   @media screen and (max-width: $phoneWidth) {
-    font-size: 14px;
+    font-size: 10px;
   }
 }
 
@@ -27,6 +27,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f7f7f7;
+  height: 100%;
 }
 
 *,
@@ -66,34 +67,25 @@ footer, // also footer if footer without section
 section,
 .section {
   position: relative;
-  padding: 40px 0;
-  @media screen and (max-width: $desktopWidth) {
-    padding: 36px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 28px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 20px 0;
-  }
+  padding: 20px 0;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  margin: 0 auto;
-}
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
 
-.wrapper-content {
-  display: flex;
-  flex-direction: column;
-  min-height: 70vh;
-  margin-top: 80px; // if header is fixed do mt: headerHeight
-}
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
 
-.wrapper-person {
-  text-align: center;
+  &__person {
+    text-align: center;
+    margin-top: 20px;
+  }
 }
 
 .container {
@@ -119,6 +111,10 @@ section,
   }
 }
 
+.header {
+  width: 100%;
+}
+
 .view-sm {
   max-width: 700px;
   &.isCenter {
@@ -129,6 +125,5 @@ section,
 
 @import './common/_common';
 @import './helpers/_helpers';
-
-// theme
-@import './theme'
+@import './common/carousel';
+@import './theme';
