--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -18,7 +18,7 @@ body {
   opacity: 0.7;
 }
 
-.card-img__wrapper {
+.card__img-wrapper {
   background: url('https://tocode.ru/static/uploads/courses/3/clash-of-clans-images/bg-sm.jpg');
 }
 
@@ -32,31 +32,28 @@ body {
   border-radius: $border-radius-size + 5;
   position: relative;
   text-align: center;
-  box-shadow: -1px 15px 30px -12px #333;
-}
-
-.card {
+  box-shadow: -1px 15px 15px -12px #333;
   user-select: none;
-}
 
-.card__image {
-  width: 400px;
-  background: url('https://tocode.ru/static/uploads/courses/3/clash-of-clans-images/bg-sm.jpg');
-}
+  &__image {
+    width: 400px;
+    background: url('https://tocode.ru/static/uploads/courses/3/clash-of-clans-images/bg-sm.jpg');
+  }
 
-.card-body {
-  min-height: 260px;
-}
+  &__body {
+    min-height: 260px;
+  }
 
-.card-stats {
-  display: flex;
-  color: #fff;
-  background-color: #ec9b3b;
-  font-weight: 700;
-  border-bottom-left-radius: $border-radius-size;
-  border-bottom-right-radius: $border-radius-size;
+  &__stats {
+    display: flex;
+    color: #fff;
+    background-color: #ec9b3b;
+    font-weight: 700;
+    border-bottom-left-radius: $border-radius-size;
+    border-bottom-right-radius: $border-radius-size;
+  }
 
-  .one-third {
+  &__one-third {
     width: 33%;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     padding: 20px 15px;
@@ -65,24 +62,19 @@ body {
     }
   }
 
-  .stat-value {
+  &__stat-value {
     position: relative;
     font-size: 24px;
     margin-bottom: 10px;
   }
 
-  .stat {
+  &__stat {
     text-transform: uppercase;
     font-weight: 400;
     font-size: 12px;
   }
-
-  .no-border {
-    border-right: none;
-  }
 }
 
-.carousel__prev,
-.carousel__next {
-  background-color: #ec9b3b;
+.no-border {
+  border-right: none;
 }
